# atcoder_python

./: .gitignore  README.md  index.html  pyproject.toml
app/: config.toml
app/algorithm/: atcoder.py  template.py
app/heuristic/: heuristic.md
app/tools/: create_html.py  create_snippets.py  setcon.py  setconid.py  toolfunc.py  update_conid.py
web/: index.html
web/css/: style.css
web/templates/: template.html
