[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atcoder_python"
version = "0.1.0"
description = ""
authors = [{ name = "Osamu Ibata", email = "atabi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    # for git.io.html
    "Jinja2==3.1.3",

    # for app
    "online-judge-tools",
    "tomlkit==0.13.3",

    # atcoder env
    "numpy==1.24.1",
    "scipy==1.10.1",
    "networkx==3.0",
    "sortedcontainers==2.4.0",
    "more-itertools==9.0.0",
    "shapely==2.0.0",
    "bitarray==2.6.2",
    "ac-library-python @ git+https://github.com/not522/ac-library-python",
    # "sympy==1.11.1",
    # "PuLP==2.7.0",
    # "mpmath==1.2.1",
    # "pandas==1.5.2",
    # "z3-solver==4.12.1.0",
    # "scikit-learn==1.2.0",
    # "ortools==9.5.2237",
    # "torch==1.13.1",
    # "polars==0.15.15",
    # "lightgbm==3.3.1",
    # "gmpy2==2.1.5",
    # "numba==0.57.0",
]

[project.scripts]
setcon = "tools.setcon:main"
setconid = "tools.setconid:main"
atc = "algorithm.atcoder:main"

[tool.setuptools.packages.find]
where = ["app"]

[tool.pyright]
exclude = [".work", "library"
]